# Stock-predictor

./: .gitignore  README.md  data.dvc  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: fetch_data.yml
data/preprocessed/price/: AAPL.csv
data/raw/price/: AAPL_price_data.json
frontend/: Dockerfile  docker-compose.yml  pyproject.toml
frontend/src/: app.py
gx/: .gitignore  great_expectations.yml  run_checkpoint.py  setup_validation.ipynb
gx/checkpoints/: AAPL_price_checkpoint.yml
gx/expectations/: .ge_store_backend_id  AAPL_price_suite.json
src/data/price/: .env.example  fetch_price_data.py  preprocess_price_data.py  test_data.py
src/model/: .env.default
src/model/activity/: preprocess_activity.py  train.py
src/model/price/: train.py
src/serve/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
src/serve/src/: db.py  download_model.py  main.py  preprocess.py  price_example.json
src/serve/src/pipelines/: pipeline_price_AAPL.pkl
src/serve/src/routes/: activity_route.py  production_metrics_route.py  stock_price_route.py
