[project]
name = "stock-predictor"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy (>=1.2.4,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pyaml (>=25.5.0,<26.0.0)",
    "great-expectations (==0.18.21)",
    "evidently (>=0.7.7,<0.8.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "mlflow (>=3.1.0,<4.0.0)",
    "tf2onnx (>=1.16.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
